# mayhem-cmake-example

./: CMakeLists.txt  Dockerfile  Dockerfile.template  Mayhemfile  fuzzme.c
.github/workflows/: mayhem.yml
